Created lists for several variables and JSONed our request

--- a/Main Requests.ipynb
+++ b/Main Requests.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "2bb735ee",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "1255fe23",
    "metadata": {},
    "outputs": [
@@ -13736,20 +13736,50 @@
     "headers = {\"Accept\": \"application/json\"}\n",
     "\n",
     "response = requests.get(url, headers=headers, params=querystring)\n",
+    "response = response.json()\n",
     "\n",
-    "pprint(response.json())"
+    "pprint(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ab75ccb9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use Pandas to clean and Format Datasets\n",
-    "# US Charging Station Data"
+    "# US Charging Station Data\n",
+    "country = [\"United States\"]\n",
+    "town = []\n",
+    "title = []\n",
+    "address_info = []\n",
+    "level_id = []\n",
+    "\n",
+    "# loop through lists\n",
+    "for towns in response:\n",
+    "    \n",
+    "    city = towns['AddressInfo']['Town']\n",
+    "    town.append(city)\n",
+    "    \n",
+    "    titles = towns['AddressInfo']['Title']\n",
+    "    title.append(titles)\n",
+    "    \n",
+    "    address = towns['AddressInfo']['AddressLine1']\n",
+    "    address_info.append(address)\n",
+    "    \n",
+    "    level = towns['Connections'][0]['LevelID']\n",
+    "    level_id.append(level)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b73ce4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
