--- a/Updated_Commits/Updated_main.ipynb
+++ b/Updated_Commits/Updated_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1f9d44bb",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,14 @@
   },
   {
    "cell_type": "code",
-
+   "execution_count": null,
    "id": "2bb735ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import dependencies\n",
     "import pandas as pd\n",
+    "import hvplot.pandas\n",
     "import requests\n",
     "import json\n",
     "import numpy as np\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-
+   "execution_count": null,
    "id": "1255fe23",
    "metadata": {},
    "outputs": [],
@@ -39,7 +40,7 @@
     "# Make API call\n",
     "url = \"https://api.openchargemap.io/v3/poi\"\n",
     "\n",
-    "querystring = {\"key\":api_key}\n",
+    "querystring = {\"key\":api_key, \"countrycode\":\"US\"}\n",
     "\n",
     "headers = {\"Accept\": \"application/json\"}\n",
     "\n",
@@ -49,73 +50,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "dc5adc88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ab75ccb9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use Pandas to clean and Format Datasets\n",
     "# US Charging Station Data\n",
-    "country = ['United States']\n",
+    "\n",
     "us_data = []\n",
     "\n",
     "# loop through lists\n",
     "for towns in response:\n",
     "\n",
     "    city = towns['AddressInfo']['Town']\n",
+    "    country = towns['AddressInfo']['Country']['Title']\n",
     "    titles = towns['AddressInfo']['Title']\n",
     "    address = towns['AddressInfo']['AddressLine1']\n",
     "    level = towns['Connections'][0]['LevelID']\n",
     "\n",
     "    # Append the City information into city_data list\n",
     "    us_data.append({\"City\": city, \n",
+    "                    \"Country\": country,\n",
     "                        \"Title\": titles, \n",
     "                        \"Address\": address, \n",
-    "                        \"Level\": level})"
+    "                        \"Level\": level})\n",
+    "\n",
+    "# Create the US data frame\n",
+    "us_data_df = pd.DataFrame(us_data)\n",
+    "us_data_df.head()"
    ]
   },
   {
    "cell_type": "code",
-
-   "id": "6b4879eb",
+   "execution_count": null,
+   "id": "15056939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean US data frame\n",
+    "us_data_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c70dd13d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us_data_df.value_counts(['Country'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39865271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://api.openchargemap.io/v3/poi\"\n",
+    "\n",
+    "querystring = {\"key\":api_key, \"countrycode\":\"GB\"}\n",
+    "\n",
+    "headers = {\"Accept\": \"application/json\"}\n",
+    "\n",
+    "response = requests.get(url, headers=headers, params=querystring)\n",
+    "response = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c976d58b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use Pandas to clean and Format Datasets\n",
     "# UK Charging Station Data\n",
     "# Create empty lists to store the data\n",
-    "country = ['United Kingdom']\n",
-    "town = []\n",
-    "title = []\n",
-    "address_info = []\n",
-    "level_id = []\n",
+    "uk_data = []\n",
     "\n",
     "# loop through lists\n",
     "for towns in response:\n",
-    "    \n",
+    "\n",
     "    city = towns['AddressInfo']['Town']\n",
-    "    town.append(city)\n",
-    "    \n",
+    "    country = towns['AddressInfo']['Country']['Title']\n",
     "    titles = towns['AddressInfo']['Title']\n",
-    "    title.append(titles)\n",
-    "    \n",
     "    address = towns['AddressInfo']['AddressLine1']\n",
-    "    address_info.append(address)\n",
-    "    \n",
     "    level = towns['Connections'][0]['LevelID']\n",
-    "    level_id.append(level)"
-
+    "\n",
+    "    # Append the City information into city_data list\n",
+    "    uk_data.append({\"City\": city, \n",
+    "                    \"Country\": country,\n",
+    "                        \"Title\": titles, \n",
+    "                        \"Address\": address, \n",
+    "                        \"Level\": level})\n",
+    "\n",
+    "# Create the US data frame\n",
+    "uk_data_df = pd.DataFrame(uk_data)\n",
+    "uk_data_df.head()"
    ]
   },
   {
    "cell_type": "code",
-
-   "execution_count": 45,
+   "execution_count": null,
    "id": "e5a994fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combined Data\n"
+    "# Use count function to check for any null values\n",
+    "uk_data_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76175737",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop NA values\n",
+    "uk_data_df = uk_data_df.dropna(how=\"any\")"
    ]
   },
   {
@@ -124,7 +190,47 @@
    "id": "67f3062c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Check all values are written as \"United Kingdom\"\n",
+    "uk_data_df[\"Country\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23a7520b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combined DataFrame\n",
+    "merged_data = pd.concat([us_data_df, uk_data_df])\n",
+    "merged_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7397459",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Which cities have the greatest amount of charging stations in the US and UK\n",
+    "merged_data.value_counts([\"City\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b0cd27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture --no-display\n",
+    "map1 = merged_data.hvplot.points(\"Lng\", \"Lat\", geo=True, color=\"City\", \n",
+    "                               size=\"Humidity\", frame_height=500, \n",
+    "                               frame_width=700, tiles=\"OSM\", scale=1, hover_cols=[\"Lng\", \"Lat\"])\n",
+    "map1"
+   ]
   }
  ],
  "metadata": {
